--- a/Eightball/Eightball.html
+++ b/Eightball/Eightball.html
@@ -8,16 +8,9 @@
 </head>
 
 <body>
-<img src="Eightball001.jpg"> <br>
-Series: on-going<br>
-Publisher: Fantagraphics<br>
+<img src="Eightball001.jpg">
 <p>
-Eightball is a comic book by Daniel Clowes and published by Fantagraphics Books. It ran from 1989 to 2004. The first issue appeared soon after the end of Clowes's previous comic book, Lloyd Llewellyn. Eightball has been among the best-selling series in alternative comics.
-</p><p>
-Early issues of Eightball feature a mixture of very short, often crudely humorous comics ("Zubrick and Pogeybait", "The Sensual Santa"), topical rants and satires ("Art School Confidential", "On Sports"), longer, more reflective self-contained stories ("Caricature", "Immortal Invisible"), and serialized works. The first extended story serialized in Eightball was Like a Velvet Glove Cast in Iron, which ran in issues #1–10. 
-</p><p>
-Glove was followed by Ghost World (issues #11–18). Beginning with #19 each issue of Eightball has been devoted to a single storyline, as opposed to the more eclectic format of the earlier issues. Issues #19–21 serialized the graphic novel David Boring, while issues #22 and 23 each consisted of a collection of short, fragmentary stories in diverse styles and formats that meshed into a unified narrative ("Ice Haven" and "The Death Ray"). The issues of Eightball beginning with #19 have been published in full color in a larger magazine-sized format. Eightball #18 included a bound-in copy of Clowes's pamphlet Modern Cartoonist.
-</p><p>
+
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -53,8 +46,14 @@ Glove was followed by Ghost World (issues #11–18). Beginning with #19 each iss
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+</p><p>
+Eightball is a comic book by Daniel Clowes and published by Fantagraphics Books. It ran from 1989 to 2004. The first issue appeared soon after the end of Clowes's previous comic book, Lloyd Llewellyn. Eightball has been among the best-selling series in alternative comics.
+</p><p>
+Early issues of Eightball feature a mixture of very short, often crudely humorous comics ("Zubrick and Pogeybait", "The Sensual Santa"), topical rants and satires ("Art School Confidential", "On Sports"), longer, more reflective self-contained stories ("Caricature", "Immortal Invisible"), and serialized works. The first extended story serialized in Eightball was Like a Velvet Glove Cast in Iron, which ran in issues #1–10. 
+</p><p>
+Glove was followed by Ghost World (issues #11–18). Beginning with #19 each issue of Eightball has been devoted to a single storyline, as opposed to the more eclectic format of the earlier issues. Issues #19–21 serialized the graphic novel David Boring, while issues #22 and 23 each consisted of a collection of short, fragmentary stories in diverse styles and formats that meshed into a unified narrative ("Ice Haven" and "The Death Ray"). The issues of Eightball beginning with #19 have been published in full color in a larger magazine-sized format. Eightball #18 included a bound-in copy of Clowes's pamphlet Modern Cartoonist.
+</p><p>
 
-</p>
 Issues: <ul>
 <li><a href="Eightball.html">Eightball #1</a></li>
 <li><a href="Eightball002.html">Eightball #2</a></li>
