--- a/Elektra/Elektra.html
+++ b/Elektra/Elektra.html
@@ -2,19 +2,33 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Elektra</title>
 </head>
 
 <body>
-<h2>Elektra</h2>
 <img src="Elektra1996.jpg"> 
-<img src="Elektra2001.jpg"> 
-<img src="Elektra2002.jpg"> 
-<img src="Elektra2014.jpg"> <br>
-Series: 19 issues 1996. 35 issues 2001. 4 issue reprint collection 2002. 11 issues 2014.<br>
-Publisher: Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Elektra1996.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Elektra2001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Elektra2002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Elektra2014.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+19 issues in 1996, 35 issues in 2001, 4 issues in 2002, 11 issues in 2014, by Marvel.
+</p><p>
 1996: Cover pencils by Mike Deodato Jr., inks by Deodato Studios. Afraid of the Dark, script by Peter Milligan, pencils by Mike Deodato Jr., inks by Deodato Studios. 
 </p><p>
 Daredevil broke her heart, Bullseye killed her, and the Hand orchestrated her resurrection, now the beautiful assassin is taking control of her life in her own ongoing title! This landmark issue establishes Elektra's new life, introduces a new cast of characters, and brings back a very old yearning to kill! 
