--- a/index.html
+++ b/index.html
@@ -3608,6 +3608,13 @@
 </tr>
 
 <tr>
+<td>Boof</td>
+<td>1994</td>
+<td>Image</td>
+<td><a href="Boof/Boof.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Book of the Dead</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -8113,6 +8120,13 @@
 </tr>
 
 <tr>
+<td>George Evans</td>
+<td>1920</td>
+<td>Creator</td>
+<td><a href="GeorgeEvans/GeorgeEvans.html">Details</a></td>
+</tr>
+
+<tr>
 <td>George Perez</td>
 <td>1954</td>
 <td>Creator</td>
@@ -11548,6 +11562,13 @@
 <td>1967</td>
 <td>Charlton</td>
 <td><a href="MGDG/MDGD.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Marc Bell</td>
+<td>1971</td>
+<td>Creator</td>
+<td><a href="MarcBell/MarcBell.html">Details</a></td>
 </tr>
 
 <tr>
