--- a/index.html
+++ b/index.html
@@ -4644,6 +4644,20 @@
 </tr>
 
 <tr>
+<td>Coda</td>
+<td>1986</td>
+<td>Coda Publishing</td>
+<td><a href="Coda/Coda.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Coda</td>
+<td>2014</td>
+<td>BOOM! Studios</td>
+<td><a href="CodaBoom/CodaBoom.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Code Name: Spitfire</td>
 <td>2010</td>
 <td>Marvel</td>
