--- a/index.html
+++ b/index.html
@@ -2416,6 +2416,13 @@
 </tr>
 
 <tr>
+<td>Audra Show</td>
+<td>2019</td>
+<td>Radiator Comics</td>
+<td><a href="AudraShow/AudraShow.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Auguste Renoir</td>
 <td>1841</td>
 <td>Creator</td>
@@ -7357,11 +7364,10 @@
 
 <tr>
 <td>Fawcett Comics</td>
-<td>2012</td>
+<td>1939</td>
 <td>Publisher</td>
 <td><a href="Fawcett/Fawcett.html">Details</a></td>
 </tr>
-
 
 <tr>
 <td>FBP: Federal Bureau of Physics</td>
@@ -14588,6 +14594,13 @@
 <td>1999</td>
 <td>Dark Horse</td>
 <td><a href="RIPD/RIPD.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Radiator Comics</td>
+<td>2014</td>
+<td>Publisher</td>
+<td><a href="RadiatorComics/RadiatorComics.html">Details</a></td>
 </tr>
 
 <tr>
