--- a/index.html
+++ b/index.html
@@ -4343,6 +4343,13 @@
 </tr>
 
 <tr>
+<td>Chaos Comics</td>
+<td>1993</td>
+<td>Publisher</td>
+<td><a href="ChaosComics/ChaosComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Champions</td>
 <td>1975</td>
 <td>Marvel</td>
@@ -7107,6 +7114,13 @@
 <td>1992</td>
 <td>Universal</td>
 <td><a href="EvilDead3/EvilDead3.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Evil Ernie</td>
+<td>1998</td>
+<td>Chaos Comics</td>
+<td><a href="EvilErnie/EvilErnie.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10805,6 +10819,13 @@
 <td>1986</td>
 <td>Marvel</td>
 <td><a href="Labyrinth/Labyrinth.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lady Death</td>
+<td>1994</td>
+<td>Chaos Comics</td>
+<td><a href="LadyDeath/LadyDeath.html">Details</a></td>
 </tr>
 
 <tr>
