--- a/index.html
+++ b/index.html
@@ -7489,6 +7489,13 @@
 </tr>
 
 <tr>
+<td>Fighting American</td>
+<td>1954</td>
+<td>Prize</td>
+<td><a href="FightingAmerican/FightingAmerican.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Filthy Rich</td>
 <td>2010</td>
 <td>Vertigo</td>
@@ -8155,9 +8162,16 @@
 
 <tr>
 <td>George Carlin</td>
-<td>1937</td>
+<td>1895</td>
 <td>Creator</td>
 <td><a href="GeorgeCarlin/GeorgeCarlin.html">Details</a></td>
+</tr>
+
+<tr>
+<td>George Carlson</td>
+<td>1937</td>
+<td>Creator</td>
+<td><a href="GeorgeCarlson/GeorgeCarlson.html">Details</a></td>
 </tr>
 
 <tr>
