--- a/Pines/Pines.html
+++ b/Pines/Pines.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="">
+<img src="Pines1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,7 +18,16 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="Pines1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Pines2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Pines3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AlleyOop/AlleyOop1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AmericasBestComics/AmericasBestComics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Pines4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Pines5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Pines6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Pines7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Pines8.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -26,13 +35,16 @@
 </p><p>
 Standard Comics was an American comic book company owned by publisher Ned Pines. Standard in turn was the parent company of two comic-book lines: Better and Nedor Publishing. Collectors and historians sometimes refer to them collectively as "Standard/Better/Nedor". In the late 1950s, Standard's remaining two titles were incorporated into the Pines Comics lineup. 
 </p><p>
-<li>Adventures into Darkness #5–14 (Aug. 1952 – Jun. 1954)
-<li>Alley Oop #10–18 (Oct. 1947 – Oct. 1949)
-<li>America's Best Comics #1–31 (Feb. 1942 – July 1949)
-<li>America's Biggest Comics Book #1 (1944; Standard / William H. Wise &amp; Company)
-<li>Barnyard Comics #1–31 (June 1944 – Sept. 1950)
-<li>Battlefront #5 (June 1952)
-<li>Best Romance #5–7 (March–Aug. 1952)
+<li><a href="Pines1.jpg">Adventures into Darkness</a> (1952)
+<li><a href="Pines2.jpg">Adventures of Mighty Mouse</a> (1956)
+<li><a href="Pines3.jpg">Adventures of Winki Dink</a> (1957)
+<li><a href="../AlleyOop/AlleyOop.html">Alley Oop</a> (1947)
+<li><a href="../AmericasBestComics/AmericasBestComics.html">America's Best Comics</a> (1942)
+<li><a href="Pines4.jpg">America's Biggest Comics Book</a> (1944)
+<li><a href="Pines5.jpg">Barnyard Comics</a> (1944)
+<li><a href="Pines6.jpg">Battlefront</a> (1952)
+<li><a href="Pines7.jpg">Best Comics</a> (1939)
+<li><a href="Pines8.jpg">Best Romance</a> (1952)
 <li>Billy West #1–8, Bill West #9–10 (1949 – Nov. 1950; Feb.1951 &amp; Feb. 1952)
 <li>The Black Terror #15–27 (July 1946 – June 1949; Standard / Visual Editions, #1–14; see Nedor Comics below)
 <li>Boots and Her Buddies #5–9 (Sept. 1948 – Sept. 1949; Standard / Visual Editions)
