--- a/Image/image.html
+++ b/Image/image.html
@@ -18,18 +18,20 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="Image1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Image2.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Image3.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Image4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Image5.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Image6.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Image7.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Image8.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Image9.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Image10.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Image11.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Image12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image14.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -41,21 +43,21 @@ Image Comics was immediately successful, and remains one of the largest comic bo
 </p><p>
 Titles
 </p><p>
-<li><a href="Image11.jpg">'68</a> (2006)
-<li><a href="Image1.jpg">10th Muse</a> (2000–2001)
-<li><a href="Image2.jpg">13 Chambers</a> (2008; by mink and Denis Medri)
-<li><a href="Image3.jpg">13th Artifact</a> (2016; by Amit Chauhan)
-<li><a href="Image4.jpg">1963</a> (1993)
-<li><a href="Image5.jpg">21</a>
-<li><a href="Image6.jpg">24Seven</a> (2006)
-<li><a href="Image7.jpg">3 Floyds: Alpha King</a> (2015)
-<li><a href="Image8.jpg">4-Fisted Adventures of Tug and Buster</a> (1998)
-<li><a href="Image9.jpg">40 Oz.</a> (1998)
-<li><a href="Image10.jpg">50 Girls 50</a> (2001)
-<li><a href="Image12.jpg">76</a> (2008)
-<li>86 Volta Dead Girl (2005)
-<li>8house (2016)
-<li>A.D.: After Death (2017)
+<li><a href="image1.jpg">10th Muse</a> (2000–2001)
+<li><a href="image2.jpg">13 Chambers</a> (2008; by mink and Denis Medri)
+<li><a href="image3.jpg">13th Artifact</a> (2016; by Amit Chauhan)
+<li><a href="image4.jpg">1963</a> (1993)
+<li><a href="image5.jpg">21</a>
+<li><a href="image6.jpg">24Seven</a> (2006)
+<li><a href="image7.jpg">3 Floyds: Alpha King</a> (2015)
+<li><a href="image8.jpg">4-Fisted Adventures of Tug and Buster</a> (1998)
+<li><a href="image9.jpg">40 Oz.</a> (1998)
+<li><a href="image10.jpg">50 Girls 50</a> (2001)
+<li><a href="../68/68.html">68</a> (2006)
+<li><a href="image11.jpg">76</a> (2008)
+<li><a href="image12.jpg">86 Voltz: the Dead Girl</a> (2005)
+<li><a href="image13.jpg">8house</a> (2016)
+<li><a href="image14.jpg">A.D.: After Death</a> (2017)
 <li>Activity
 <li>Adrenalynn: Weapon of War (1999)
 <li>Adrift (2015)
@@ -149,7 +151,7 @@ Titles
 <li>Bonus
 <li>Bone
 <li>Bonerest (2005)
-<li>Boof
+<li><a href="../Boof/Boof.html">Boof</a> (1994)
 <li>Boof and the Bruise Crew
 <li>Book of Shadows
 <li>Brass
@@ -209,7 +211,7 @@ Titles
 <li>Dead Body Road
 <li>Dead Space
 <li><a href="../DeadlyClass/DeadlyClass.html">Deadly Class</a> (2013)
-<li>Deadworld (2005)
+<li><a href="../DeadWorld/DeadWorld.html">Deadworld</a> (2005)
 <li>Death Dealer
 <li>Death Jr.
 <li>Death or Glory, by Rick Remender and Bengal (2018)
@@ -219,7 +221,7 @@ Titles
 <li>Defcon 4
 <li>Defiance
 <li>Deity: Revelations
-<li>Descender (2015)
+<li><a href="../Descender/Descender.html">Descender</a> (2015)
 <li>Desperate Times
 <li>Detonator (2004)
 <li>A Distant Soil
@@ -233,7 +235,7 @@ Titles
 <li>Dusty Star
 <li>DV8
 <li>Dynamo 5 (2007)
-<li>East of West (2013)
+<li><a href="../EastOfWest/EastOfWest.html">East of West</a> (2013)
 <li>Eclipse (2017)
 <li>Elephantmen (2006)
 <li>Elsewhere (2017)
@@ -242,14 +244,14 @@ Titles
 <li>Eternal Empire (2017)
 <li>Expatriate (2005)
 <li>Extreme Sacrifice (1995)
-<li>Extremity (2017)
+<li><a href="../Extremity/Extremity.html">Extremity</a> (2017)
 <li>Faction Paradox
-<li>Fade Out (2014)
+<li><a href="../FadeOut/FadeOut.html">Fade Out</a> (2014)
 <li>Fairlady (2019)
 <li>Fall Out Toy Works (2009)
-<li>Farmhand (2018)
-<li>Fatale
-<li>Fear Agent (2005)
+<li><a href="../Farmhand/Farmhand.html">Farmhand</a> (2018)
+<li><a href="../Fatale/Fatale.html">Fatale</a> (2012)
+<li><a href="../FearAgent/FearAgent.html">Fear Agent</a> (2005)
 <li>Fearless
 <li>Feather
 <li>Fell (2005)
@@ -261,6 +263,7 @@ Titles
 <li>The Fix (2016)
 <li>Flaming Carrot Comics (2004)
 <li>Flavor (2018)
+<li><a href="../Flight/Flight.html">Flight</a> (2004)
 <li>Forever Amber
 <li>Four Eyes (2008)
 <li>Four Letter Worlds
@@ -277,6 +280,7 @@ Titles
 <li>Get Naked 
 <li>Ghost Spy
 <li>Ghosted
+<li><a href="../GideonFalls/GideonFalls.html">Gideon Falls</a> (2008)
 <li>Gift (2004)
 <li>Girls (2005)
 <li>Gladstone's School for World Conquerors
@@ -284,7 +288,7 @@ Titles
 <li>Glitter Bomb: The Fame Game (2017)
 <li>Go Girl!
 <li>God Complex (2009)
-<li>God Country (2017)
+<li><a href="../GodCountry/GodCountry.html">God Country</a> (2017)
 <li>God Hates Astronauts (2014)
 <li>Gødland (2005)
 <li>Gray Area
@@ -302,6 +306,7 @@ Titles
 <li>Hawaiian Dick
 <li>Hawaiian Dick: The Last Resort (2004)
 <li>Hazed
+<li><a href="../HeadLopper/HeadLopper.html">Head Lopper</a> (2015)
 <li>Heirs of Eternity
 <li>Hellcop
 <li>Hellshock
@@ -314,14 +319,16 @@ Titles
 <li>Humankind
 <li>Humans (2015)
 <li>Hunter-Killer (2005)
+<li><a href="../IHateFairyland/IHateFairyland.html">I Hate Fairyland</a> (2015)
 <li>I Kill Giants
+<li><a href="../IceCreamMan/IceCreamMan.html">Ice Cream Man</a> (2018)
 <li>Imaginaries (2005)
 <li>Immortal II
 <li>Infidel
 <li>Infinite Dark
 <li>Intimidators 
 <li>Intrigue
-<li>Invincible (2003)
+<li><a href="../Invincible/Invincible.html">Invincible</a> (2003)
 <li>Invisible Republic (2015)
 <li>Iron Ghost (2005)
 <li>Iron Wings
@@ -348,7 +355,7 @@ Titles
 <li>Lady Rawhide
 <li>Last Christmas
 <li>Last Shot
-<li>Lazarus (2013)
+<li><a href="../Lazarus/Lazarus.html">Lazarus</a> (2013)
 <li>Leave It to Chance
 <li>Legacy
 <li>Legend of Supreme
@@ -358,10 +365,10 @@ Titles
 <li>Limbo (2015)
 <li>Lions, Tigers and Bears
 <li>Liquid City
-<li>Little Bird (2019)
+<li><a href="../LittleBird/LittleBird.html">Little Bird</a> (2019)
 <li>Little Red Hot
 <li>Loaded Bible
-<li>Low
+<li><a href="../Low/Low.html">Low</a> (2014)
 <li>Lucha Libre
 <li>Lullaby: Wisdom Seeker
 <li>M. Rex
@@ -369,12 +376,12 @@ Titles
 <li>Maestros (2017)
 <li>Mage
 <li>Man-Eaters by Chelsea Cain and Kate Niemczyk
-<li>Manhattan Projects
+<li><a href="../ManhattanProjects/ManhattanProjects.html">Manhattan Projects</a> (2012)
 <li>Manifest Destiny (2013)
 <li>Mask of Zorro
 <li>Masters of the Universe
 <li>Maximage
-<li>Maxx
+<li><a href="../Maxx/Maxx.html">Maxx</a> (1993)
 <li>Mayhem!
 <li>Mech Destroyer
 <li>Megaton Man
@@ -383,13 +390,13 @@ Titles
 <li>Micronauts
 <li>Middlewest (2018)
 <li>Misplaced
-<li>Monstress by Marjorie Liu and Sana Takeda (2015)
+<li><a href="../Monstress/Monstress.html">Monstress</a> (2015)
 <li>Moonstruck by Grace Ellis and Shae Beagle (2017)
 <li>Mora (2005)
 <li>More Than Mortal: Otherworlds
-<li>Morning Glories
-<li>Motor Crush (2016)
-<li>Murder Falcon (2018)
+<li><a href="../MorningGlories/MorningGlories.html">Morning Glories</a> (2010)
+<li><a href="../MotorCrush/MotorCrush.html">Motor Crush</a> (2016)
+<li><a href="../MurderFalcon/MurderFalcon.html">Murder Falcon</a> (2018)
 <li>Mutant Earth
 <li>Mythstalkers
 <li>Nailbiter
@@ -402,20 +409,19 @@ Titles
 <li>Night World (2014)
 <li>No Place Like Home
 <li>Noble Causes (2002)
-<li>Noble Causes (2004)
 <li>Nonplayer
-<li>Nowhere Men
+<li><a href="../NowhereMen/NowhereMen.html">Nowhere Men</a> (2012)
 <li>NYC Mech
 <li>NYC Mech: Beta Love (2005)
 <li>Obergeist
 <li>Occult Crimes Taskforce
 <li>Oliver (2019)
 <li>Olympus
-<li>Orc Stain
+<li><a href="../OrcStain/OrcStain.html">Orc Stain</a> (2010)
 <li>Others
 <li>Outcast
 <li>Outlaw Territory
-<li>Paper Girls (2015)
+<li><a href="../PaperGirls/PaperGirls.html">Paper Girls</a> (2015)
 <li>Paradigm (2002)
 <li>Pax Romana (2007)
 <li>Peter Panzerfaust (2013)
@@ -426,6 +432,7 @@ Titles
 <li>Pirates of Coney Island
 <li>PITT
 <li>Planetoid
+<li><a href="../Plutona/Plutona.html">Plutona</a> (2015)
 <li>Point of Impact
 <li>Popgun (2012)
 <li>Portent
@@ -437,10 +444,11 @@ Titles
 <li>Prodigy
 <li>Proof (2007)
 <li>Prophet
+<li><a href="../ProximaCentauri/ProximaCentauri.html">Proxima Centauri</a> (2018)
 <li>PvP (2003)
 <li>Random Acts of Violence (2010)
 <li>Rasputin (2014)
-<li>Rat Queens (2013)
+<li><a href="../RatQueens/RatQueens.html">Rat Queens</a> (2013)
 <li>Realm (2017)
 <li>Redlands (2017)
 <li>Redneck (2017)
@@ -449,17 +457,19 @@ Titles
 <li>Renato Jones (2017)
 <li>Repo (2007)
 <li>Revenge (2014)
-<li>Revival (2013)
-<li>Rex Mundi (2002)
+<li><a href="../Revival/Revival.html">Revival</a> (2013)
+<li><a href="../RexMundi/RexMundi.html">Rex Mundi</a> (2002)
 <li>Riptide
 <li>Rising Stars: Voices of the Dead (2005)
+<li><a href="../RocketGirl/RocketGirl.html">Rocket Girl</a>
 <li>Rocketo: Journey to the Hidden Sea (2005)
 <li>Rose (2017)
 <li>Rotogin: Junkbotz
+<li><a href="../RoyalCity/RoyalCity.html">Royal City</a> (2017)
 <li>Rumble (2014)
 <li>Runes of Ragnan
 <li>Safest Place
-<li>Saga
+<li><a href="../Saga/Saga.html">Saga</a> (2017)
 <li>Satellite Sam
 <li>Savage Dragon
 <li>Savant Garde
@@ -470,12 +480,12 @@ Titles
 <li>Season of the Witch (2005)
 <li>Second Stage Turbine Blade
 <li>Seven to Eternity (2016)
-<li>Sex Criminals (2013)
+<li><a href="../SexCriminals/SexCriminals.html">Sex Criminals</a> (2013)
 <li>Shadowhawk
 <li>Shadows
 <li>Shaman's Tears
 <li>Ship of Fools
-<li>Shutter
+<li><a href="../Shutter/Shutter.html">Shutter</a> (2014)
 <li>Sidekick
 <li>Siren
 <li>Skullkickers
@@ -490,9 +500,10 @@ Titles
 <li>Sorrow
 <li>Soul Kiss
 <li>Southern Bastards (2014)
-<li>Southern Cross (2015)
-<li>Spawn
+<li><a href="../SouthernCross/SouthernCross.html">Southern Cross</a> (2015)
+<li><a href="../Spawn/Spawn.html">Spawn</a> (1992)
 <li>Spread (2014)
+<li><a href="../SpySeal/SpySeal.html">Spy Seal</a> (2017)
 <li>Stardust Kid (2005)
 <li>Stellar (2018)
 <li>Stone
@@ -506,8 +517,9 @@ Titles
 <li>Suburban Glamour
 <li>Sullivan's Sluggers
 <li>Super Dinosaur
+<li><a href="../SuperannuatedMan/SuperannuatedMan.html">Superannuated Man</a> (2014)
 <li>SuperPatriot
-<li>Supreme
+<li><a href="../Supreme/Supreme.html">Supreme</a> (1992)
 <li>Sweets
 <li>Sword
 <li>Sword of Dracula
@@ -537,7 +549,7 @@ Titles
 <li>Underground
 <li>Undying Love (2011)
 <li>Union
-<li>Unnatural by Mirka Andolfo (2018)
+<li>Unnatural (2018)
 <li>Vanguard (1993)
 <li>Velocity
 <li>Velvet (2013)
@@ -548,7 +560,7 @@ Titles
 <li>Voice in the Dark
 <li>Voltron
 <li>Wahoo Morris
-<li>Walking Dead (2003)
+<li><a href="../WalkingDead/WalkingDead.html">Walking Dead</a> (2003)
 <li>Wanted
 <li>War Heroes
 <li>Ward of the State
@@ -560,18 +572,18 @@ Titles
 <li>Weapon Zero
 <li>Wetworks
 <li>Whispers
-<li>Wicked + The Divine (2014)
+<li><a href="../WickedAndTheDivine/WickedAndTheDivine.html">Wicked + The Divine</a> (2014)
 <li>Wicked West
 <li>Wildcats
 <li>Wildguard
-<li>WildStar
+<li><a href="../Wildstar/Wildstar.html">WildStar</a> (1993)
 <li>Wildstorm!
 <li>Witch Doctor
 <li>Wonderlost
-<li>Wytches by Scott Snyder and Jock
+<li><a href="../Wytches/Wytches.html">Wytches</a> (2014)
 <li>XXXombies
 <li>Youngblood
-<li>Zero
+<li><a href="../Zero/Zero.html">Zero</a> (2013)
 
 </p>
 </body>
