--- a/RobertCrumb/RobertCrumb.html
+++ b/RobertCrumb/RobertCrumb.html
@@ -25,6 +25,7 @@
 <div class="mySlides" style="text-align: center;"><img src="RobertCrumb04.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RobertCrumb05.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RobertCrumb06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RobertCrumb07.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
