--- a/index.html
+++ b/index.html
@@ -232,6 +232,13 @@
 </tr>
 
 <tr>
+<td>68</td>
+<td>2006</td>
+<td>Image</td>
+<td><a href="68/68.html">Details</a></td>
+</tr>
+
+<tr>
 <td>99 Days</td>
 <td>2009</td>
 <td>Vertigo</td>
@@ -7948,6 +7955,13 @@
 <td>1847</td>
 <td>Creator</td>
 <td><a href="GabrielFerrier/GabrielFerrier.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gags</td>
+<td>1938</td>
+<td>Triangle</td>
+<td><a href="Gags/Gags.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16291,6 +16305,13 @@
 </tr>
 
 <tr>
+<td>Spawn</td>
+<td>1992</td>
+<td>Image</td>
+<td><a href="Spawn/Spawn.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Spectre</td>
 <td>1940</td>
 <td>DC</td>
@@ -18165,6 +18186,13 @@
 <td>2007</td>
 <td>Vertigo</td>
 <td><a href="VinylUnderground/VinylUnderground.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Virgil Finlay</td>
+<td>1914</td>
+<td>Creator</td>
+<td><a href="VirgilFinlay/VirgilFinlay.html">Details</a></td>
 </tr>
 
 <tr>
