--- a/index.html
+++ b/index.html
@@ -3993,6 +3993,13 @@
 </tr>
 
 <tr>
+<td>Cameron Forsley</td>
+<td>1986</td>
+<td>Creator</td>
+<td><a href="CameronForsley/CameronForsley.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cameron Stewart</td>
 <td>1976</td>
 <td>Creator</td>
@@ -7625,6 +7632,13 @@
 <td>1993</td>
 <td>Dark Horse</td>
 <td><a href="Floaters/Floaters.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Floyd Gottfredson</td>
+<td>1905</td>
+<td>Creator</td>
+<td><a href="FloydGottfredson/FloydGottfredson.html">Details</a></td>
 </tr>
 
 <tr>
