--- a/AdventuresOfLittleOrphanAnnie/AdventuresOfLittleOrphanAnnie.html
+++ b/AdventuresOfLittleOrphanAnnie/AdventuresOfLittleOrphanAnnie.html
@@ -8,10 +8,7 @@
 </head>
 
 <body>
-<img src="LittleOrphanAnnie01.jpg"><br>
-9 issue newspaper collections 1924-1934 by Cupples &amp; Leon<br>
-3 issues in comic format  1941-1948 by Dell<br>
-Illustrator and writer: Harold Gray
+<img src="LittleOrphanAnnie01.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -38,6 +35,8 @@ Illustrator and writer: Harold Gray
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 
+</p><p>
+9 issue newspaper collections 1924-1934 by Cupples &amp; Leon, 3 issues in comic format 1941-1948 by Dell, created by <a href="../HaroldGray/HaroldGray.html">Harold Gray</a>
 </p><p>
 Little Orphan Annie is a daily American comic strip created by Harold Gray and syndicated by the Tribune Media Services. The strip took its name from the 1885 poem "Little Orphant Annie" by James Whitcomb Riley, and made its debut on August 5, 1924, in the New York Daily News.
 </p><p>
