--- a/HaroldGray/HaroldGray.html
+++ b/HaroldGray/HaroldGray.html
@@ -28,7 +28,7 @@
 </div></div>
 </p><p>
 <p>
-Harold Lincoln Gray (January 20, 1894 – May 9, 1968) was an American cartoonist, best known as the creator of the newspaper comic strip Little Orphan Annie. He is considered to be the first American cartoonist to use a comic strip to express a political philosophy.
+Harold Lincoln Gray (January 20, 1894 – May 9, 1968) was an American cartoonist, best known as the creator of the newspaper comic strip <a href="../AdventuresOfLittleOrphanAnnie/AdventuresOfLittleOrphanAnnie.html">Little Orphan Annie</a>. He is considered to be the first American cartoonist to use a comic strip to express a political philosophy.
 </p><p>
 From 1921 to 1924, he did the lettering for Sidney Smith's The Gumps. After he came up with a strip idea in 1924 for Little Orphan Otto, the title was altered by Chicago Tribune editor Joseph Medill Patterson to Little Orphan Annie, launched August 5, 1924.
 </p><p>
