--- a/index.html
+++ b/index.html
@@ -14349,6 +14349,12 @@
 <td><a href="PocketChange/PocketChange.html">Details</a></td>
 </tr>
 
+<tr>
+<td>Pogo</td>
+<td>1948</td>
+<td>Simon &amp; Schuster</td>
+<td><a href="Pogo/Pogo.html">Details</a></td>
+</tr>
 
 <tr>
 <td>Pokemon</td>
