--- a/HarveyKurtzman/HarveyKurtzman.html
+++ b/HarveyKurtzman/HarveyKurtzman.html
@@ -28,6 +28,7 @@
 <div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -37,9 +38,9 @@ Harvey Kurtzman (October 3, 1924 – February 21, 1993) was an American cartooni
 </p><p>
 Kurtzman began to work on the New Trend line of comic books at EC Comics in 1950. He wrote and edited the Two-Fisted Tales and Frontline Combat war comic books, where he also drew many of the carefully researched stories, before he created his most-remembered comic book, Mad, in 1952. Kurtzman scripted the stories and had them drawn by top EC cartoonists, most frequently <a href="../WillElder/WillElder.html">Will Elder</a>, <a href="../WallyWood/WallyWood.html">Wally Wood</a>, and Jack Davis; the early Mad was noted for its social critique and parodies of pop culture. The comic book switched to a magazine format in 1955, and Kurtzman left it in 1956 over a dispute with EC's owner William Gaines over financial control. 
 </p><p>
-Following his departure with EC, Kurtzman did a variety of cartooning work, including editing the short-lived Trump and the self-published Humbug. In 1959, he produced the first book-length work of original comics, the adult-oriented, satirical Jungle Book. He edited the low-budget Help! from 1960 to 1965, a humor magazine which featured work by future Monty Python member Terry Gilliam and the earliest work of underground cartoonists such as Robert Crumb and Gilbert Shelton.
+Following his departure with EC, Kurtzman did a variety of cartooning work, including editing the short-lived Trump and the self-published <a href="../Humbug/Humbug.html">Humbug</a>. In 1959, he produced the first book-length work of original comics, the adult-oriented, satirical Jungle Book. He edited the low-budget Help! from 1960 to 1965, a humor magazine which featured work by future Monty Python member Terry Gilliam and the earliest work of underground cartoonists such as Robert Crumb and Gilbert Shelton.
 </p><p>
-Kurtzman brought Help! to an end after the success of the risqué Playboy feature Little Annie Fanny began to take up his time. While Annie Fanny provided much of his income for the rest of his career, he continued to produce an eclectic body of work, including screenwriting the animated Mad Monster Party? in 1967 and directing, writing and designing several shorts for Sesame Street in 1969.
+Kurtzman brought <a href="../Help/Help.html">Help!</a> to an end after the success of the risqué Playboy feature <a href="../LittleAnnieFanny/LittleAnnieFanny.html">Little Annie Fanny</a> began to take up his time. While Annie Fanny provided much of his income for the rest of his career, he continued to produce an eclectic body of work, including screenwriting the animated Mad Monster Party? in 1967 and directing, writing and designing several shorts for Sesame Street in 1969.
 </p><p>
 From 1973, Kurtzman taught cartooning at the School of Visual Arts in New York. His work gained greater recognition toward the end of his life, and he oversaw deluxe reprintings of much of his work. The Harvey Award was named in Kurtzman's honor in 1988. He was inducted into the Will Eisner Comic Book Hall of Fame in 1989, and his work earned five positions on The Comics Journal's Top 100 Comics of the 20th Century.
 </p>
