--- a/index.html
+++ b/index.html
@@ -9428,6 +9428,13 @@
 </tr>
 
 <tr>
+<td>Humbug</td>
+<td>1957</td>
+<td>Humbug</td>
+<td><a href="Humbug/Humbug.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hunter The Age of Magic</td>
 <td>2001</td>
 <td>Vertigo</td>
@@ -10231,6 +10238,13 @@
 <td>1927</td>
 <td>Creator</td>
 <td><a href="JoeOrlando/JoeOrlando.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Joe Palooka</td>
+<td>1930</td>
+<td>Cupples &amp; Leon</td>
+<td><a href="JoePalooka/JoePalooka.html">Details</a></td>
 </tr>
 
 <tr>
