--- a/40OzComics/40OzComics.html
+++ b/40OzComics/40OzComics.html
@@ -29,7 +29,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Contains both previously published stories and new stories of Rocketboy and Zombie Kid by Jim Mahfood. Published in black and white in 1998.
+Contains both previously published stories and new stories of Rocketboy and Zombie Kid by 40 Oz founder <a href="../JimMahfood/JimMahfood.html">Jim Mahfood</a>. Published in black and white in 1998.
 </p>
 
 </body>
