--- a/JimMahfood/JimMahfood.html
+++ b/JimMahfood/JimMahfood.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="JimMafood1.jpg">
+<img src="JimMahfood1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,15 +18,15 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="JimMafood1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="JimMafood2.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="JimMafood3.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="JimMafood4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="JimMafood5.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="JimMafood6.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="JimMafood7.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="JimMafood8.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="JimMafood9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimMahfood1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimMahfood2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimMahfood3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimMahfood4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimMahfood5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimMahfood6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimMahfood7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimMahfood8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimMahfood9.jpg"></div>
 
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -37,7 +37,9 @@
 </p><p>
 Apart from his creator-owned comic book series Grrl Scouts and his comic strip Stupid Comics (which appears weekly in the Phoenix New Times) he also did work for Marvel Comics on various Spider-Man titles, including Ultimate Marvel Team-Up and Spectacular Spider-Man.
 </p><p>
-His big break came when Oni Press hired him to illustrate two comic books based on Kevin Smith's movie Clerks from scripts by Smith, following his work on Marvel Comics Generation X Underground Special. 
+His big break came when Oni Press hired him to illustrate two comic books based on Kevin Smith's movie Clerks from scripts by Smith, following his work on Marvel Comics Generation X Underground Special.  
+</p><p>
+At the age of 18 Mahfood attended the Kansas City Art Institute, where he met Mike Huddleston and formed <a href="../40OzComics/40OzComics.html">40 Oz Comics</a>.
 </p><p>
 Titles
 </p><p>
