--- a/index.html
+++ b/index.html
@@ -10136,10 +10136,10 @@
 </tr>
 
 <tr>
-<td>Jim Mafood</td>
+<td>Jim Mahfood</td>
 <td>1975</td>
 <td>Creator</td>
-<td><a href="JimMafood/JimMafood.html">Details</a></td>
+<td><a href="JimMahfood/JimMahfood.html">Details</a></td>
 </tr>
 
 <tr>
